
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int verifier_log ;
union bpf_attr {size_t insn_cnt; int log_level; int log_size; int log_buf; int license; int insns; int prog_type; } ;
typedef int uint64_t ;
struct bpf_insn {int dummy; } ;


 int BPF_PROG_LOAD ;
 int BPF_PROG_TYPE_SOCKET_FILTER ;
 int GPLv2 ;
 int bpf_ (int ,union bpf_attr*) ;
 int errno ;
 int exit (int) ;
 int printf (char*) ;

int prog_load(struct bpf_insn *insns, size_t insns_count)
{
    char verifier_log[100000];
    union bpf_attr create_prog_attrs = {
        .prog_type = BPF_PROG_TYPE_SOCKET_FILTER,
        .insn_cnt = insns_count,
        .insns = (uint64_t)insns,
        .license = (uint64_t)GPLv2,
        .log_level = 1,
        .log_size = sizeof(verifier_log),
        .log_buf = (uint64_t)verifier_log
    };
    int progfd = bpf_(BPF_PROG_LOAD, &create_prog_attrs);
    int errno_ = errno;
    errno = errno_;
    if (progfd == -1) {
  printf("bpf prog load error\n");
  exit(-1);
 }
    return progfd;
}
