; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_46006.c_prog_load.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_46006.c_prog_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_insn = type { i32 }
%union.bpf_attr = type { i64 }

@BPF_PROG_LOAD = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"bpf prog load error\0A\00", align 1
@BPF_PROG_TYPE_SOCKET_FILTER = common dso_local global i32 0, align 4
@GPLv2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prog_load(%struct.bpf_insn* %0, i64 %1) #0 {
  %3 = alloca %struct.bpf_insn*, align 8
  %4 = alloca i64, align 8
  %5 = alloca [100000 x i8], align 16
  %6 = alloca %union.bpf_attr, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.bpf_insn* %0, %struct.bpf_insn** %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = bitcast %union.bpf_attr* %6 to i32*
  %10 = getelementptr inbounds [100000 x i8], [100000 x i8]* %5, i64 0, i64 0
  %11 = ptrtoint i8* %10 to i32
  store i32 %11, i32* %9, align 8
  %12 = load i32, i32* @BPF_PROG_LOAD, align 4
  %13 = call i32 @bpf_(i32 %12, %union.bpf_attr* %6)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* @errno, align 4
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* @errno, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = call i32 @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @exit(i32 -1) #3
  unreachable

21:                                               ; preds = %2
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @bpf_(i32, %union.bpf_attr*) #1

declare dso_local i32 @printf(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
